--- a/main/main.html
+++ b/main/main.html
@@ -13,23 +13,21 @@
       <div
         class="bg-[#21272c] w-[350px] h-auto ring-1 rounded-2xl shadow-xl shadow-gray-600 ring-sky-50 flex flex-col"
       >
-        <form class="w-full">
-          <input
-            type="text"
-            class="bg-transparent ring-0 ring-transparent h-20 p-2 font-bold text-6xl text-white w-full text-end"
-            value="0"
-          />
-        </form>
+        <input
+          type="text"
+          class="h-20 p-2 font-bold text-6xl text-white text-end"
+          id="inputs"
+        />
         <div class="p-4 grid grid-cols-4 grid-rows-5 gap-4">
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726]  text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726] text-3xl"
           >
             AC
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726]  text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726] text-3xl"
           >
             DEL
           </button>
@@ -47,43 +45,43 @@
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             7
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             8
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             9
           </button>
           <button
             type="button"
             class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726] font-semibold text-3xl"
-          > 
+          >
             *
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white  shadow-xl shadow-[#041726] font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             4
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white  shadow-xl shadow-[#041726] font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             5
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white  shadow-xl shadow-[#041726] font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             6
           </button>
@@ -95,54 +93,55 @@
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white  shadow-xl shadow-[#041726] font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             1
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             2
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             3
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726]  font-bold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-[#7bb749] shadow-xl shadow-[#041726] font-bold text-3xl"
           >
             +
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             00
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             0
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             .
           </button>
           <button
             type="button"
-            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white bg-[#cd6614] shadow-xl shadow-[#041726]  font-semibold text-3xl"
+            class="rounded-full size-14 border-[1px] border-transparent mt-2 text-white bg-[#cd6614] shadow-xl shadow-[#041726] font-semibold text-3xl"
           >
             =
           </button>
         </div>
       </div>
     </div>
+    <script src="logic.js"></script>
   </body>
 </html>
